Stopped using TypeScript, it was too much of a pain with all these libraries

--- a/web/index.html
+++ b/web/index.html
@@ -8,10 +8,15 @@
 		<script src="https://www.chartjs.org/chartjs-chart-financial/chartjs-chart-financial.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-zoom/2.0.1/chartjs-plugin-zoom.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.35.0/ace.js"></script>
-		<script src="./scripts/unquantified.js" type="module"></script>
+		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
+		<script src="unquantified.js"></script>
+		<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
 		<link rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 	<body>
-		<div id="editor">q43a34retg</div>
+		<div id="content"></div>
+		<div id="editor"></div>
 	</body>
 </html>
