Added highlight rules and started working on the scripting engine

--- a/web/index.html
+++ b/web/index.html
@@ -10,13 +10,44 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.35.0/ace.js"></script>
 		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 		<script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
-		<script src="unquantified.js"></script>
+		<script src="./scripts/highlight-rules.js"></script>
+		<script src="./scripts/unquantified.js"></script>
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
-		<link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="stylesheet" href="./style.css">
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	</head>
 	<body>
 		<div id="content"></div>
-		<div id="editor"></div>
+		<div id="editor">$t1 = 2024-01-01
+$t2 = 2024-06-01
+$t3 = 2024-02-01 08:00:00
+$t4 = 2024-02-01 17:00:00
+$ticker = GC
+$tickers = [ES, NQ, CL]
+plotCandlestick ES, -6mo, last
+plotCandlestick ES, -6mo, now
+plotLine [ES, NQ, CL], -1y, $t2, daily
+localTime on
+plotLine $tickers, -1y, $t2, daily
+localTime off
+plotLine $tickers, $t2, +1h, daily
+plotLine $tickers, $t2, +1w, 1h
+plotline GC, 2024-02-01 08:00, 2024-02-01 17:00, 15m
+plotline $ticker, 2024-02-01 08:00:00, 2024-02-01 17:00:00, 30m
+covariance [ES, NQ, GC, CL, NG]
+covariance [ES, NQ, GC, CL, NG], first, last
+covariance [ES, NQ, GC, CL, NG], $t1, $t2
+covariance all, $t1, $t2
+walkForward amazing_sma_crossover_strat, NQ, -4y, last, 15m
+$parameters = {sma1: 10 to 20, sma2: 20 to 40, risk_reward: 3.0, max_bars: 15}
+walkForward amazing_sma_crossover_strat, NQ, -4y, last, 30m, $parameters
+$parameters = {
+	sma1: 10 to 25 step 5,
+	sma2: 20 to 50 step 10,
+	risk_reward: 2.5,
+	max_bars: 15
+}
+walkForward amazing_sma_crossover_strat, NQ, -4y, last, 30m, $parameters
+winRatio NQ, $t1, $2</div>
 	</body>
 </html>
