Scripting engine basics seem to work

--- a/web/index.html
+++ b/web/index.html
@@ -46,6 +46,6 @@ $parameters = {
 	max_bars: 15
 }
 walkForward amazing_sma_crossover_strat, NQ, -4y, last, 30m, $parameters
-winRatio NQ, $t1, $2</div>
+winRatio NQ, $t1, $t2</div>
 	</body>
 </html>
