--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
 		<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 		<script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+		<script src="https://unpkg.com/ohm-js@17/dist/ohm.min.js"></script>
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
 		<link rel="stylesheet" href="./style.css">
@@ -18,9 +19,9 @@
 		<script type="module">
 			import { WebUi } from "./scripts/web-ui.js";
 
-			document.addEventListener("DOMContentLoaded", _ => {
+			document.addEventListener("DOMContentLoaded", async _ => {
 				const webUi = new WebUi();
-				webUi.initialize();
+				await webUi.initialize();
 			});
 		</script>
 	</head>
