By default all variables are now persisted across sessions

--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://unpkg.com/ohm-js@17.1.0/dist/ohm.min.js" integrity="sha512-JuSOMVhTIOEN/19IsolZJAVGAGsce4wYaKqzajbIwuMV3i5cI2dGJOkLoM/DdkQj+7uqVPPVlha+86sb6eDoyg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdn.jsdelivr.net/npm/serialijse@0.3.0/dist/serialijse.bundle.min.js" integrity="sha512-N/JNopdW7Ah09jw4xhiYuepoXHIcjctjGYWrqAfxNjwEXAQoF2Px0LNoLcJXh9dUICCBZ4hkrA/5sEYyLCx/Fw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
 		<link rel="stylesheet" href="./style.css">
