Switched to a different serialization library to persist variables since the other one was causing issues with Luxon

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Unquantified Web</title>
-		<script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4" integrity="sha512-dUlSLLkxslGILhPdCkALwk4szPhp3xmZIKFtlUD+O9Lslq41Aksmdt5OGqpomDoT4FsCUH70jQU8ezZHI3v1RQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.4.4/luxon.js" integrity="sha512-Y0hNpPUGIlAoQY6XHJFOCN3OfCPtNtUqiyfOOPbZ8kMrHfyFXv1v6Hn6rMA1G+KmMG/TSLeo0vuULkJZToFu0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.js" integrity="sha512-LUpacDQOhzI4MVomIbJOUbdKypLvklsznjLrjD9GwzynjSlF7qLy112SzTw+ZWJPxhBvNRLGGdW/7E1slOvsFA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.3.1" integrity="sha512-I8SeDoNxRKOuQMhqHmx95hydiG/LCY9SFCs3cqAf+f1kIZbAyXXIXIIwgx32ZIgZpOVrEOHSfyjeKxRNIuBvWQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://www.chartjs.org/chartjs-chart-financial/chartjs-chart-financial.js" integrity="sha512-xYtFNm3nxyrvnZMg5nnzvhsLxhPueD/dTA+yNj8nZXYZX+nwTmanhJ4Tu/k921AWnoikj1AcrWpaUX/CACFpIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -13,7 +13,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://unpkg.com/ohm-js@17.1.0/dist/ohm.min.js" integrity="sha512-JuSOMVhTIOEN/19IsolZJAVGAGsce4wYaKqzajbIwuMV3i5cI2dGJOkLoM/DdkQj+7uqVPPVlha+86sb6eDoyg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		<script src="https://cdn.jsdelivr.net/npm/serialijse@0.3.0/dist/serialijse.bundle.min.js" integrity="sha512-N/JNopdW7Ah09jw4xhiYuepoXHIcjctjGYWrqAfxNjwEXAQoF2Px0LNoLcJXh9dUICCBZ4hkrA/5sEYyLCx/Fw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdn.jsdelivr.net/npm/kvin@1.2.14/kvin.min.js"></script>
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css">
 		<link rel="stylesheet" href="./style.css">
