Added drawdown to equity charts

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Unquantified Web</title>
+		<title>Unquantified</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.4.4/luxon.js" integrity="sha512-Y0hNpPUGIlAoQY6XHJFOCN3OfCPtNtUqiyfOOPbZ8kMrHfyFXv1v6Hn6rMA1G+KmMG/TSLeo0vuULkJZToFu0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.js" integrity="sha512-LUpacDQOhzI4MVomIbJOUbdKypLvklsznjLrjD9GwzynjSlF7qLy112SzTw+ZWJPxhBvNRLGGdW/7E1slOvsFA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.3.1" integrity="sha512-I8SeDoNxRKOuQMhqHmx95hydiG/LCY9SFCs3cqAf+f1kIZbAyXXIXIIwgx32ZIgZpOVrEOHSfyjeKxRNIuBvWQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
